deployment/file-transfer/file-transfer-service.yml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: file-transfer-service
  labels:
    app: file-transfer
spec:
  # Choose how to expose your service
  type: ClusterIP
  ports:
    - name: http
      # The port number to expose the service
      port: 9965
      protocol: TCP
      targetPort: 8081
  # Pod to route service traffic  
  selector:
    app: file-transfer # Matches the app label in your file-transfer deployment
