deployment/file-transfer/file-transfer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-transfer-ingress
spec:
  rules:
    - host: file-transfer-1b34d01272-dms.apps.ir-central1.arvancaas.ir # Your domain name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-transfer-service # Your Service name
                port:
                  number: 8081 # Service's targetPort
